--- a/moocdb-site-vizclone/index.html
+++ b/moocdb-site-vizclone/index.html
@@ -2,25 +2,17 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOOCviz</title>
     <meta name="description" content="Rails Bootstrap">
+
+    <title>MOOCdb</title>
+
     <link href="styles.css" media="all" rel="stylesheet">
     <script src="analytics.js" async=""></script>
     <script src="mooc.js"></script>
     <link href="prettify.css" type="text/css" rel="stylesheet">
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-47181760-1', 'mit.edu');
-      ga('send', 'pageview');
-    </script>
-
     <meta content="authenticity_token" name="csrf-param">
-<meta content="uZQz21kMBIsHjXVI/Byb5gAsFvuni3WJ0ryCiIGG/nc=" name="csrf-token">
+    <meta content="uZQz21kMBIsHjXVI/Byb5gAsFvuni3WJ0ryCiIGG/nc=" name="csrf-token">
   </head>
   <body>
     <header class="navbar navbar-fixed-top">
