--- a/moocdb-site/index.html
+++ b/moocdb-site/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <div class="navbar-brand">MOOCdb</div>
+        <div class="navbar-brand">The MOOCdb Project</div>
         <ul class="nav navbar-nav">
           <li><a href="http://moocdb.csail.mit.edu/wiki/index.php?title=MOOCdb">MOOCdb wiki</a></li>
           <li><a href="http://moocviz.csail.mit.edu">MOOCviz</a></li>
@@ -34,7 +34,7 @@
   <div class="container-fluid">
 
     <div class="text-centered">
-      <h1>The MOOCdb Project</h1>
+      <h1>The MOOCdb Project: Advancing MOOC data science through collaborative frameworks</h1>
     </div>
 
     <div class="col-md-1"></div>
