link to personal site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Just a place to put things
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>d9w's github</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="site.css">
+        <script src="modernizr-2.8.3.min.js"></script>
+    </head>
+    <body>
+        <div class="center">
+          Home page is at <a href="https://d9w.xyz">d9w.xyz</a>
+          <br />
+          <br />
+          Information on the Wind Farm Layout Optimization Competition can be found <a
+          href="https://www.irit.fr/wind-competition/">here.</a>
+        </div>
+    </body>
+</html>
