--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     </head>
     <body>
         <div class="center">
-          Home page is at <a href="https://d9w.xyz">d9w.xyz</a>
-          <br />
-          <br />
-          Information on the Wind Farm Layout Optimization Competition can be found <a
-          href="https://www.irit.fr/wind-competition/">here.</a>
+            <a href="https://d9w.xyz">d9w.xyz</a>
         </div>
     </body>
 </html>
