--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="center">
-            <a href="https://d9w.xyz">d9w.xyz</a>
+            <a href="https://personnel.isae-supaero.fr/dennis-wilson">here</a>
         </div>
     </body>
 </html>
