--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+        <meta name="ROBOTS" content="INDEX,FOLLOW">
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>d9w's github</title>
-        <meta name="description" content="">
+        <title>Dennis G. Wilson</title>
+        <meta name="description" content="Dennis G. Wilson's homepage">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="site.css">
-        <script src="modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/site.css">
+        <script src="js/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <div class="center">
-            <a href="https://personnel.isae-supaero.fr/dennis-wilson">here</a>
+            <div class="middle">
+                <div class="inner" style="text-align;justify;">
+                    <p><h1>Dennis G. Wilson</h1></p>
+
+                    <p>Associate Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a></p>
+                    <p>CTO of <a href="https://nautilia.co">Nautilia Computing</a></p>
+
+                    <p>I teach <a href="https://d9w.github.io/evolution/">evolutionary computation</a> and <a href="https://supaerodatascience.github.io/">data science</a></p>
+
+                    <p>I research <a href="https://arxiv.org/pdf/1806.05695.pdf">learning</a> in <a href="https://arxiv.org/pdf/1806.05695.pdf">artificial agents</a> inspired by <a href="https://www.mitpressjournals.org/doi/pdf/10.1162/isal_a_092">biology</a></p>
+
+                    <p>I develop <a href="https://github.com/d9w/CartesianGeneticProgramming.jl/">algorithms</a> and <a href="https://github.com/d9w/Cambrian.jl">frameworks</a> in <a href="https://docs.julialang.org/">Julia</a></p>
+
+                    <p>Someday, I want to simulate the oceans</p>
+
+                    <p>
+                        <a href="mailto:dennis.wilson@isae-supaero.fr">
+                        <img src="img/logo_email.png" width="50" height="50"></a>
+                        &nbsp;
+                        <a href="https://scholar.google.fr/citations?user=k7moRpYAAAAJ&hl=en" target="_blank">
+                            <img src="img/logo_gscholar.png" width="50" height="50"></a>
+                            &nbsp;
+                        <a href="https://github.com/d9w/" target="_blank">
+                            <img src="img/logo_github.png" width="50" height="50" title="@d9w"></a>
+                        &nbsp;
+                        <a href="https://www.linkedin.com/in/dennis-g-wilson/" target="_blank">
+                        <img src="img/logo_linkedin.png" width="50" height="50"></a>
+                    </p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
