--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                     <p>I develop <a href="https://github.com/d9w/CartesianGeneticProgramming.jl/">algorithms</a> and <a href="https://github.com/d9w/Cambrian.jl">frameworks</a> in <a href="https://docs.julialang.org/">Julia</a></p>
 
-                    <p>Someday, I want to simulate the oceans</p>
+                    <p>I'm currently working on <a href="https://nautilia.co">simulating the oceans</a></p>
 
                     <p>
                         <a href="mailto:dennis.wilson@isae-supaero.fr">
