added twitter link

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                     <p><h1>Dennis G. Wilson</h1></p>
 
                     <p>Assistant Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a></p>
-                    <p>CTO of <a href="https://nautilia.co">Nautilia Computing</a></p>
+                    <p>Co-founder of <a href="https://nautilia.co">Nautilia Computing</a></p>
 
-                    <p>I teach <a href="https://d9w.github.io/evolution/">evolutionary computation</a> and <a href="https://supaerodatascience.github.io/">data science</a></p>
+                    <p>I teach <a href="https://d9w.github.io/evolution/">evolutionary computation</a> and <a href="https://supaerodatascience.github.io/">data science</a>.</p>
 
-                    <p>I research <a href="https://arxiv.org/pdf/1806.05695.pdf">learning</a> in <a href="https://arxiv.org/pdf/1806.05695.pdf">artificial agents</a> inspired by <a href="https://www.mitpressjournals.org/doi/pdf/10.1162/isal_a_092">biology</a></p>
+                    <p>I research <a href="https://arxiv.org/pdf/1806.05695.pdf">learning</a> in <a href="https://arxiv.org/pdf/1806.05695.pdf">artificial agents</a> inspired by <a href="https://www.mitpressjournals.org/doi/pdf/10.1162/isal_a_092">biology</a>.</p>
 
-                    <p>I develop <a href="https://github.com/d9w/CartesianGeneticProgramming.jl/">algorithms</a> and <a href="https://github.com/d9w/Cambrian.jl">frameworks</a> in <a href="https://docs.julialang.org/">Julia</a></p>
+                    <p>I develop <a href="https://github.com/d9w/CartesianGeneticProgramming.jl/">algorithms</a> and <a href="https://github.com/d9w/Cambrian.jl">frameworks</a> in <a href="https://docs.julialang.org/">Julia</a>.</p>
 
-                    <p>I'm working on <a href="https://nautilia.co">simulating the oceans</a></p>
+                    <p>I'm working on <a href="https://nautilia.co">simulating the oceans</a>.</p>
 
                     <p>
                         <a href="mailto:dennis.wilson@isae-supaero.fr">
@@ -37,6 +37,10 @@
                         <a href="https://scholar.google.fr/citations?user=k7moRpYAAAAJ&hl=en" target="_blank">
                             <img src="img/logo_gscholar.png" width="50" height="50"></a>
                             &nbsp;
+                        <a href="https://twitter.com/digiwilson" target="_blank">
+                            <img src="img/logo_twitter.png" width="50" height="50" title="@digiwilson"></a>
+                        &nbsp;
+
                         <a href="https://github.com/d9w/" target="_blank">
                             <img src="img/logo_github.png" width="50" height="50" title="@d9w"></a>
                         &nbsp;
