university of toulouse

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="inner" style="text-align;justify;">
                     <p><h1>Dennis G. Wilson</h1></p>
 
-                    <p>Assistant Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a></p>
+                    <p>Assistant Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a>, University of Toulouse</p>
                     <p>Co-founder of <a href="https://nautilia.co">Nautilia Computing</a></p>
 
                     <p>I teach <a href="https://d9w.github.io/evolution/">evolutionary computation</a> and <a href="https://supaerodatascience.github.io/">data science</a>.</p>
