change icons to font awesome

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <meta name="description" content="Dennis G. Wilson's homepage">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/site.css">
-        <script src="js/modernizr-2.8.3.min.js"></script>
+        <link rel="icon" href="img/favicon.png" type="image/x-icon">
     </head>
     <body>
         <div class="center">
@@ -30,22 +31,23 @@
 
                     <p>I'm working on <a href="https://nautilia.co">simulating the oceans</a>.</p>
 
+                    <br/>
+
                     <p>
                         <a href="mailto:dennis.wilson@isae-supaero.fr">
-                        <img src="img/logo_email.png" width="50" height="50"></a>
+                            <i class="far fa-envelope icon" title="email"></i></a>
                         &nbsp;
                         <a href="https://scholar.google.fr/citations?user=k7moRpYAAAAJ&hl=en" target="_blank">
-                            <img src="img/logo_gscholar.png" width="50" height="50"></a>
-                            &nbsp;
-                        <a href="https://twitter.com/digiwilson" target="_blank">
-                            <img src="img/logo_twitter.png" width="50" height="50" title="@digiwilson"></a>
+                            <i class="fas fa-graduation-cap icon" title="gscholar"></i></a>
                         &nbsp;
-
+                        <a href="https://twitter.com/digiwilson" target="_blank">
+                            <i class="fab fa-twitter icon" title="@digiwilson"></i></a>
+                        &nbsp;
                         <a href="https://github.com/d9w/" target="_blank">
-                            <img src="img/logo_github.png" width="50" height="50" title="@d9w"></a>
+                            <i class="fab fa-github icon" title="@d9w"></i></a>
                         &nbsp;
                         <a href="https://www.linkedin.com/in/dennis-g-wilson/" target="_blank">
-                        <img src="img/logo_linkedin.png" width="50" height="50"></a>
+                            <i class="fab fa-linkedin icon" title="@d9w"></i></a>
                     </p>
                 </div>
             </div>
