--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <i class="far fa-envelope icon" title="email"></i></a>
                         &nbsp;
                         <a href="https://scholar.google.fr/citations?user=k7moRpYAAAAJ&hl=en" target="_blank">
-                            <i class="fas fa-graduation-cap icon" title="gscholar"></i></a>
+                            <i class="fas fa-graduation-cap icon" title="scholar"></i></a>
                         &nbsp;
                         <a href="https://twitter.com/digiwilson" target="_blank">
                             <i class="fab fa-twitter icon" title="@digiwilson"></i></a>
@@ -47,7 +47,7 @@
                             <i class="fab fa-github icon" title="@d9w"></i></a>
                         &nbsp;
                         <a href="https://www.linkedin.com/in/dennis-g-wilson/" target="_blank">
-                            <i class="fab fa-linkedin icon" title="@d9w"></i></a>
+                            <i class="fab fa-linkedin icon" title="linkedin"></i></a>
                     </p>
                 </div>
             </div>
