--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="inner" style="text-align;justify;">
                     <p><h1>Dennis G. Wilson</h1></p>
 
-                    <p>Assistant Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a>, University of Toulouse</p>
+                    <p>Associate Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a>, University of Toulouse</p>
 
-		    <p>I research <a href="https://hal.archives-ouvertes.fr/hal-03305590/document">evolution</a> and <a href="https://arxiv.org/pdf/2202.08539">learning</a> in <a href="https://arxiv.org/pdf/1806.05695.pdf">artificial agents</a>.
+		    <p>I research <a href="https://hal.archives-ouvertes.fr/hal-03305590/document">evolution</a> and <a href="https://arxiv.org/pdf/2202.08539">learning</a> in <a href="https://arxiv.org/pdf/1806.05695.pdf">artificial systems</a>.
 		    
 		    <p>I teach <a href="https://supaerodatascience.github.io/">data science</a> and <a href="https://d9w.github.io/evolution/">evolutionary computation</a>.</p>
 
@@ -31,14 +31,14 @@
                     <br/>
 
                     <p>
-                        <a href="mailto:dennis.wilson@isae-supaero.fr">
+                        <a href="mailto:dennis.wilson@isae.fr">
                             <i class="far fa-envelope icon" title="email"></i></a>
                         &nbsp;
                         <a href="https://scholar.google.fr/citations?user=k7moRpYAAAAJ&hl=en" target="_blank">
                             <i class="fas fa-graduation-cap icon" title="scholar"></i></a>
                         &nbsp;
-                        <a href="https://twitter.com/digiwilson" target="_blank">
-                            <i class="fab fa-twitter icon" title="@digiwilson"></i></a>
+                        <a href="https://mamot.fr/@d9w" target="_blank">
+                            <i class="fab fa-mastodon icon" title="d9w@mamot.fr"></i></a>
                         &nbsp;
                         <a href="https://github.com/d9w/" target="_blank">
                             <i class="fab fa-github icon" title="@d9w"></i></a>
