--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                         &nbsp;
                         <a href="https://www.linkedin.com/in/dennis-g-wilson/" target="_blank">
                             <i class="fab fa-linkedin icon" title="linkedin"></i></a>
+                        &nbsp;
+                        <a href="wilson_cv.pdf" target="_blank">
+                            <i class="fas fa-file-certificate icon" title="CV"></i></a>
+ 
                     </p>
                 </div>
             </div>
