--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <i class="fab fa-linkedin icon" title="linkedin"></i></a>
                         &nbsp;
                         <a href="wilson_cv.pdf" target="_blank">
-                            <i class="fas fa-file-certificate icon" title="CV"></i></a>
+                            <i class="fas fa-file icon" title="CV"></i></a>
  
                     </p>
                 </div>
