title change to professor

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="inner" style="text-align;justify;">
                     <p><h1>Dennis G. Wilson</h1></p>
 
-                    <p>Associate Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a>, University of Toulouse</p>
+                    <p>Professor of Artificial Intelligence<br/>and Data Science at <a href="https://personnel.isae-supaero.fr/dennis-wilson">ISAE-Supaero</a>, University of Toulouse</p>
 
 		    <p>I research <a href="https://hal.archives-ouvertes.fr/hal-03305590/document">evolution</a> and <a href="https://arxiv.org/pdf/2202.08539">learning</a> in <a href="https://arxiv.org/pdf/1806.05695.pdf">artificial systems</a>.
 		    
@@ -36,9 +36,6 @@
                         &nbsp;
                         <a href="https://scholar.google.fr/citations?user=k7moRpYAAAAJ&hl=en" target="_blank">
                             <i class="fas fa-graduation-cap icon" title="scholar"></i></a>
-                        &nbsp;
-                        <a href="https://mamot.fr/@d9w" target="_blank">
-                            <i class="fab fa-mastodon icon" title="d9w@mamot.fr"></i></a>
                         &nbsp;
                         <a href="https://github.com/d9w/" target="_blank">
                             <i class="fab fa-github icon" title="@d9w"></i></a>
